<resources>
    <string name="app_name">NowApp</string>
    <string name="google_maps_key">AIzaSyBgwhe1x1JsZIjgUeup5CRu5edWyJZoiak</string>
    <string name="best_time_private_key">pri_18e10aa81fd347968d610f94064f8376</string>
    <string name="login_to_your_account_to_ncontinoue">Login to your account to \ncontinoue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_in">Log In</string>
    <string name="did_you_forgot_your_password">Did you forgot your password?</string>
    <string name="sign_in_using_one_of_the_methord_below">Sign in using one of the methord below</string>
    <string name="are_you_new_here">Are you new here?</string>
    <string name="register_now">Register Now</string>
    <string name="want_to_own_a_buisness_profile">Want to own a buisness profile?</string>
    <string name="apply_here">Apply Here</string>
    <string name="register">Register</string>
    <string name="policy_msg">By registering, you agree to the Terms of Service and Privacy Policies.</string>
    <string name="enter_data_continoue">Enter your data continoue</string>
    <string name="allow_permission">Allow All Permissions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="restaurant">Restaurant</string>
    <string name="nightClub">Night Club</string>
    <string name="bar">Bar</string>
    <string name="club">Club</string>
    <string name="coffeeShop">Coffee Shop</string>
    <string name="fastFood">Fast Food</string>
    <string name="intro_message">
        <![CDATA[
            This sample demonstrates how to record video using Camera2 API.
        ]]>
    </string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>
    <string name="play_stop">Play or Stop</string>
    <string name="buisness_name_req">Buisness name shouldn\'t be empty</string>
    <string name="buisness_type_req">Select Business Type</string>
    <string name="buisness_email_req">Buisness email shouldn\'t be empty</string>
    <string name="buisness_number_req">Buisness number shouldn\'t be empty</string>
    <string name="first_name_req">First name shouldn\'t be empty</string>
    <string name="last_name_req">Last name shouldn\'t be empty</string>
    <string name="applicant_number_req">Applicant number shouldn\'t be empty</string>
    <string name="password_req">Password shouldn\'t be empty</string>
    <string name="need_location">Need your location, Please turn on your location</string>
    <string name="unknown">UNKNOWN</string>
    <string name="unknownAddress">Unknown</string>
    <string name="select_location">Select Location</string>
    <string name="zip_code_req">Zip code shouldn\'t be empty</string>
    <string name="no_internet">Internet not connected</string>
    <string name="please_wait">Please Wait...</string>
    <string name="check_buisness_avalibility">Checking business availability</string>
    <string name="OK">OK</string>
    <string name="business_availability">Business Availability</string>
    <string name="business_avail_message">This business name at this location is not available, Please retry with another name and location</string>
    <string name="error_occur">Error occur, Try again</string>
    <string name="select_image">Select Image</string>
    <string name="licence_req">Please provide your buisness licence</string>
    <string name="signup_failed">Failed to signup, Try again</string>
    <string name="log_req">Logo required</string>
    <string name="background_image_req">Business background image is required</string>
    <string name="verification_email_sent">Verification email has been sent to your email</string>
    <string name="email_not_verify">Please verify your email</string>
    <string name="login_failed">Login Filed, Try again</string>
    <string name="user_not_exist">User doesn\'t exist</string>
    <string name="login_successfully">Successfully Login</string>
    <string name="email_req">Email should\'n be empty</string>
    <string name="name_req">Name should\'n be empty</string>
    <string name="phone_req">Phone number should\'n be empty</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="verification_email_not_sent">Failed to send verification email</string>
    <string name="fname_req">First name should\'n be empty</string>
    <string name="lname_req">Last name shouldn\'t be empty</string>
    <string name="no_data_avail">Data not available</string>
    <string name="select_star">Select Rating</string>
    <string name="select_occupation">Select Occupation</string>
    <string name="select_type">Select Restaurant Type</string>
    <string name="restaurant_not_avail">Restaurant Not Available, Please update your search</string>
    <string name="path">path</string>
    <string name="upload_failed">Failed to uplaod video, Try again</string>
    <string name="UploadVideo">Upload Video</string>
    <string name="uploadRec">Upload Recoding</string>
    <string name="facebook_app_id">898082907512654</string>
    <string name="fb_login_protocol_scheme">fb898082907512654</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="app_record">Record Video</string>
    <string name="exceeded_quota">You have exceeded posts creation limit. Only 2 posts can be created each day</string>
    <string name="msg_camera_storage_setting">Linebully requires to access camera service so you can upload best pictures, Turn on camera and storage permission from setting.</string>
    <string name="settings">Settings</string>
    <string name="msg_permission_rationale">Linebully requires to access camera service so you can upload best pictures, Turn on camera and storage permission from setting.</string>
    <string name="ok">Ok</string>
    <string name="validation_msg_valid_address">Your address is not valid. Please select it from dropdown</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="logout">Log out</string>
    <string name="cancel_btn">Cancel</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="validation_servicename">Please enter Service Name.</string>
    <string name="validation_serviceprice">Please define price.</string>
    <string name="validation_estimatedtime">Please select Estimated time.</string>
    <string name="no_service_msg">No Service Added</string>
    <string name="no_data_msg">No Data Found!</string>
    <string name="no_review_available">No review available!</string>
    <string name="msg_no_media">No media available!</string>
    <string name="msg_no_favourite">No favourite available!</string>
    <string name="delete_service_msg">Are you sure you want to delete this service? </string>
    <string name="otp_resend">OTP has been sent to your registered Mobile Number</string>
    <string name="waiting_admin_approval">Waiting for Admin Approval.</string>
    <string name="account_expiration_date">Account Expiration Date -</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_by_name">Search by Barber Name or Shop</string>
    <string name="search_by_city">Search by city, state or zip</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="filter_by">Filter by</string>
    <string name="earliest_availability">Earliest Availability</string>
    <string name="rating_lbl">Rating :</string>
    <string name="highest_to_lowest">Highest to Lowest</string>
    <string name="lowest_to_highest">Lowest to Highest</string>
    <string name="high_to_low">High to Low</string>
    <string name="low_to_high">Low to High</string>
    <string name="results">Results</string>
    <string name="avalability">Avalability</string>
    <string name="change_password">Change Password</string>
    <string name="dialog_msg_delete_media">Are you sure you want to delete this media?</string>
    <string name="holiday">Holiday</string>
    <string name="fill_opening">Please select Opening time.</string>
    <string name="fill_closing">Please select Closing time.</string>
    <string name="validat_same_OC">Opening time and Closing time should not be same.</string>
    <string name="validat_same_BSBE">Break Start time and Break End time should not be same.</string>
    <string name="fill_Bstart">Please select Break Start time.</string>
    <string name="fill_BEnd">Please select Break End time.</string>
    <string name="fill_name">Please Enter Barber Name/Shop Name or City/Zipcode .</string>
    <string name="fill_City">Please Enter City/Zipcode .</string>
    <string name="unfav_msg">Are you sure you want to remove </string>
    <string name="tv_cancelled">Cancelled</string>
    <string name="tv_upcomming">Upcoming Appt</string>
    <string name="tv_Completed">Completed</string>
    <string name="tv_Missed">Missed</string>
    <string name="msg_no_orders">No orders available!</string>
    <string name="msg_alert_order_accept">Are you sure you want to accept this order?</string>
    <string name="msg_alert_order_reject">Are you sure you want to reject this order?</string>
    <string name="msg_alert_order_cancel">Are you sure you want to cancel this order?</string>
    <string name="validation_msg_price0">Price must be a more then 0</string>
    <string name="cancelled_by_me">Cancelled by me</string>
    <string name="cancelled_by_barber">Cancelled by barber</string>
    <string name="write_review_lbl">Write a Review</string>
    <string name="vali_select_sevice">Please select service</string>
    <string name="title_selet_date">Pick a Date and Time</string>
    <string name="ttl_order_Summary">Order Summary</string>
    <string name="ttl_notification">Notifications</string>
    <string name="ttl_walkin_req">Walk In Order Request</string>
    <string name="tv_msg_for_early_delay">Send your current status to the upcomming customer.</string>
    <string name="no_barber_found">No barbers match your search criteria</string>
    <string name="max_video_upload_limit">Maximum media upload limit is 10.</string>
    <string name="business_hours">Business Hours</string>
    <string name="business_calander">Business Calendar</string>
    <string name="off_day">"Off/ Closed</string>
    <string name="male">"Male</string>
    <string name="female">"Female</string>
    <string name="both">"Both</string>
    <string name="i_m_child_friendly">I\'m Child Friendly</string>
    <string name="gender">Gender</string>
    <string name="take_video">Take Video</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_image">Choose Imgage</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
</resources>