<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".Screens.UserScreens.Login">
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:src="@drawable/now_logo">
            </ImageView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:weightSum="2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_weight="0.7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="45dp"
                        android:layout_marginRight="45dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/hey_icon" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/raleway_regular"
                            android:text="@string/login_to_your_account_to_ncontinoue"
                            android:textAlignment="center"
                            android:textColor="@color/text_gray"
                            android:textSize="12dp"
                            android:textStyle="normal" />
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:hint="Email"
                            android:textColorHint="@color/text_gray"
                            app:hintTextAppearance="@style/TextLabel"
                            app:hintTextColor="@color/color_pink_primary">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_email_at"
                                android:drawablePadding="10dp"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@color/text_gray"
                                android:textCursorDrawable="@drawable/cursor_pink"
                                android:textSize="13dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:hint="Password"
                            android:textColorHint="@color/text_gray"
                            app:hintTextAppearance="@style/TextLabel"
                            app:hintTextColor="@color/color_pink_primary">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_padlock"
                                android:drawablePadding="10dp"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:textColor="@color/text_gray"
                                android:textCursorDrawable="@drawable/cursor_pink"
                                android:textSize="13dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/login_gradient_button"
                            android:onClick="Login">
                            <TextView
                                style="@style/TextAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:fontFamily="@font/raleway_regular"
                                android:letterSpacing="0.1"
                                android:text="@string/login_in"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="12dp" />
                        </RelativeLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/raleway_extra_bold"
                            android:maxLines="1"
                            android:text="@string/did_you_forgot_your_password"
                            android:textAllCaps="false"
                            android:textColor="@color/text_gray"
                            android:textSize="13dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:background="@drawable/rounder_corner_bg_app_black"
                    android:layout_weight="1.3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_marginLeft="45dp"
                            android:layout_marginRight="45dp"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12dp"
                                android:textColor="@color/text_gray"
                                android:singleLine="true"
                                android:text="@string/sign_in_using_one_of_the_methord_below"
                                android:textAllCaps="false"
                                android:textStyle="bold"
                                android:fontFamily="@font/raleway_extra_bold" />
                            <LinearLayout
                                android:layout_marginTop="20dp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <RelativeLayout
                                    android:id="@+id/facebookLoginRL"
                                    android:layout_width="45dp"
                                    android:layout_height="45dp">
                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_centerInParent="true"
                                        android:src="@drawable/facebook_icon_shadow" />
                                </RelativeLayout>
                                <RelativeLayout
                                    android:id="@+id/googleLoginRL"
                                    android:layout_marginLeft="25dp"
                                    android:layout_width="45dp"
                                    android:layout_height="45dp">
                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_centerInParent="true"
                                        android:src="@drawable/google_icon_shadow"/>
                                </RelativeLayout>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_marginTop="20dp"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_gravity="center"
                                    android:textSize="11dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="normal"
                                    android:text="@string/are_you_new_here"
                                    android:textColor="@color/text_gray"
                                    android:fontFamily="@font/raleway_regular"/>
                                <TextView
                                    android:id="@+id/register"
                                    android:layout_gravity="center"
                                    android:textSize="12dp"
                                    android:layout_marginLeft="5dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:text="@string/register_now"
                                    android:textColor="@color/color_pink_primary"
                                    android:fontFamily="@font/raleway_semibold"/>
                            </LinearLayout>
                        </LinearLayout>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_marginBottom="20dp"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:textSize="11dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:text="@string/want_to_own_a_buisness_profile"
                            android:textColor="@color/text_gray"
                            android:fontFamily="@font/raleway_regular"/>
                        <TextView
                            android:onClick="StartBuisnessApplication"
                            android:textSize="12dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/apply_here"
                            android:textColor="@color/color_pink_primary"
                            android:fontFamily="@font/raleway_semibold"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>
